# HUST-OperatingSystem-Labs

./: .gitignore  CMakeLists.txt  Makefile  README.md  fifo
Assignments/: lab extra OSIoT directory.pptx  lab0_OSIoT_Prepare.ppt  lab1_OSIoT_signal_pipe.ppt  lab2_OSIoT_thread.ppt  lab3_OSIoT_file_copy.ppt
Assignments&Report/: lab4_OSIoT_TinyOS.ppt
TinyOS-Lab/Part1-Binary0-7/: BlinkAppC.nc  BlinkC.nc  typescript
TinyOS-Lab/Part2-Blink-Compute/: BlinkAppC.nc  BlinkC.nc
TinyOS-Lab/Part3-Blink-Task/: BlinkAppC.nc  BlinkC.nc
TinyOS-Lab/Part4-Split‐phase/: BlinkC.nc
TinyOS-Lab/PartEX-01-Sense/: SenseAppC.nc  SenseC.nc
TinyOS-Lab/PartEX-BaseStation/: BaseStationC.nc  BaseStationP.nc
TinyOS-Lab/PartEX-Sense/: Makefile  ReceiveSerial.java  Sense.h  SenseAppC.nc  SenseC.nc  SenseMsg.java
lab01-Pipe/: fifo.c  pipe.c
lab02-Sync/: sync.c
lab03-FileCopy/: filecp.c  filecp.h
lab04-Directory/: directory.c
lab04-TinyOS/Part1-Binary0-7/: BlinkC.nc
lab04-TinyOS/Part2-Compute/: BlinkC.nc
lab04-TinyOS/Part3-Task/: BlinkAppC.nc  BlinkC.nc
lab04-TinyOS/Part4-Split‐phase/: Makefile
lab04-TinyOS/PartEX-01-Sense/: SenseC.nc
lab04-TinyOS/PartEX-Sense/: Makefile  SenseC.nc
zxcpyplib/: Makefile  ring_buf.h  systemV_ipc.h  zxcpyp_err.c  zxcpyp_err.h  zxcpyp_sem.c  zxcpyp_sem.h  zxcpyp_sys.h
